--- a/ds/line/3stack/README
+++ b/ds/line/3stack/README
@@ -1,2 +1,4 @@
 栈能操作的位置只有栈顶一个位置。所以说不管是增删改都只能针对栈顶位置操作。
 这里两种实现，一种是顺序存储的栈用arr实现，还有一种是链式存储的栈用链表来实现
+
+顺序存储的栈的缺陷 ---定长，由于用到了数组 所以初始化时必须给定数组的大小，这样不太灵活。因为作为程序员，并不知道用户用栈放多少数据。
